<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bilibili.magicasakura.widgets.TintToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color_primary"
        app:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_10"
                    android:src="@mipmap/back"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/change_theme"
                    android:src="@drawable/ic_card_24dp"
                    android:padding="@dimen/dp_10"
                    android:onClick="setTheme"
                    android:layout_alignParentRight="true"
                    android:title="选择主题"/>
            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                android:layout_centerInParent="true"
                android:id="@+id/cv">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">
                        <View
                            android:layout_alignParentStart="true"
                            android:layout_width="8dp"
                            android:layout_height="match_parent"
                            android:background="#2fa881"
                            />
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:text="@string/login"
                            android:textColor="#FFCC00"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#c5c5c5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textSize="13sp"
                                android:hint="@string/Username"
                                android:textColor="#2fa881"
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:background="@drawable/selector_bg_edit"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:paddingBottom="2dp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                        <android.support.design.widget.TextInputLayout
                            android:textColorHint="#c5c5c5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textSize="13sp"
                                android:hint="@string/Password"
                                android:textColor="#2fa881"
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:background="@drawable/selector_bg_edit"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:paddingBottom="2dp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                        <TextView
                            android:id="@+id/bt_go"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:text="@string/go"
                            android:textColor="#d3d3d3"
                            >
                        </TextView>
                    </RelativeLayout>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#9a9a9a"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_your_password"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                android:src="@drawable/plus"
                android:transitionName="loginFab"
                android:layout_alignTop="@id/cv"
                android:layout_marginTop="25dp"
                android:layout_alignEnd="@id/cv"
                android:layout_marginEnd="-20dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Primary Color"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    >

                    <ImageView
                        android:id="@+id/btn_red"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/x30"
                        android:layout_weight="1"
                        android:background="@color/red_400"
                        />

                    <ImageView
                        android:id="@+id/btn_pink"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/x30"
                        android:layout_weight="1"
                        android:background="@color/pink_400"
                        android:layout_marginLeft="@dimen/dp_10"
                        />

                    <ImageView
                        android:id="@+id/btn_purple"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/x30"
                        android:layout_weight="1"
                        android:background="@color/purple_400"
                        android:layout_marginLeft="@dimen/dp_10"
                        />

                    <ImageView
                        android:id="@+id/btn_blue"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/x30"
                        android:layout_weight="1"
                        android:background="@color/blue_400"
                        android:layout_marginLeft="@dimen/dp_10"
                        />

                    <ImageView
                        android:id="@+id/btn_blue_grey"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/x30"
                        android:layout_weight="1"
                        android:background="@color/blue_grey_400"
                        android:layout_marginLeft="@dimen/dp_10"
                        />

                    <ImageView
                        android:id="@+id/btn_green"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/x30"
                        android:layout_weight="1"
                        android:background="@color/green_400"
                        android:layout_marginLeft="@dimen/dp_10"
                        />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </com.bilibili.magicasakura.widgets.TintToolbar>





</RelativeLayout>
